--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="./node_modules/angular-toastr/dist/angular-toastr.min.css">
   <link rel="stylesheet" href="./node_modules/allmighty-autocomplete/style/autocomplete.css">
   <link rel="stylesheet" href="./node_modules/ui-select/dist/select.css">
-  <link rel="stylesheet" href="./node_modules/sweetalert/lib/sweet-alert.css">
+  <link rel="stylesheet" href="./node_modules/angular-sweetalert/node_modules/sweetalert/lib/sweet-alert.css">
 
   <script src="./node_modules/jquery/dist/jquery.js"></script>
   <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
@@ -32,7 +32,8 @@
   <script src="./node_modules/@flowjs/ng-flow/dist/ng-flow-standalone.min.js"></script>
   <script src="./node_modules/ui-select/dist/select.min.js"></script>
   <script src="./node_modules/angular-sanitize/angular-sanitize.min.js"></script>
-  <script src="./node_modules/sweetalert/lib/sweet-alert.min.js"></script>
+  <script src="./node_modules/angular-sweetalert/node_modules/sweetalert/lib/sweet-alert.min.js"></script>
+  <script src="./node_modules/angular-sweetalert/SweetAlert.min.js"></script>
   <script src="./js/flow.js"></script>
   <script src="./js/ach.js"></script>
   <script src="./js/invoice.js"></script>
@@ -40,10 +41,11 @@
   <script src="./js/paperwork.js"></script>
   <script src="./js/app.js"></script>
   <script src="./js/apiService.js"></script>
+  <script src="./js/agent.js"></script>
 
 </head>
 
-<body>
+<body ng-controller="HomeController as home">
   <div ng-view></div>
 </body>
 
